<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/filter_dialog"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="12dp"
              android:text="@string/filter_desc"/>
    <RadioGroup android:id="@+id/filter_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">
        <RadioButton android:id="@+id/all_radio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/all_status"/>
        <RadioButton android:id="@+id/alive_radio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/alive"/>
        <RadioButton android:id="@+id/dead_radio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/dead"/>
        <RadioButton android:id="@+id/unknown_radio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/unknown"/>
    </RadioGroup>
    <Button android:id="@+id/filter_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_gravity="end"
            android:text="@string/ok"/>
</LinearLayout>