<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_margin="8dp">
        <androidx.cardview.widget.CardView android:layout_width="wrap_content"
                                           android:layout_height="wrap_content"
                                           app:cardCornerRadius="7dp">
            <ImageView android:id="@+id/char_image"
                       android:src="@android:drawable/ic_menu_my_calendar"
                       android:layout_width="75dp"
                       android:layout_height="75dp"
                       android:foregroundGravity="bottom"
                       android:contentDescription="@string/image_desc"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:layout_gravity="center"
                      android:orientation="vertical"
                      android:layout_margin="4dp">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:orientation="horizontal">
                <TextView android:text="@string/name_text"
                          android:textStyle="bold"
                          android:layout_marginEnd="3dp"
                          android:layout_width="wrap_content"
                          android:layout_height="match_parent"/>
                <TextView android:id="@+id/char_name"
                          android:text="Rick Sanchez"
                          android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:maxLines="1"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:orientation="horizontal">
                <TextView android:text="@string/status_text"
                          android:textStyle="bold"
                          android:layout_marginEnd="3dp"
                          android:layout_width="wrap_content"
                          android:layout_height="match_parent"/>
                <TextView android:id="@+id/char_status"
                          android:text="Alive"
                          android:layout_width="wrap_content"
                          android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:orientation="horizontal">
                <TextView android:text="@string/species_text"
                          android:textStyle="bold"
                          android:layout_marginEnd="3dp"
                          android:layout_width="wrap_content"
                          android:layout_height="match_parent"/>
                <TextView android:id="@+id/char_species"
                          android:text="Mythological Creature"
                          android:layout_width="wrap_content"
                          android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
                android:id="@+id/favorite_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/fav_outline"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"/>
    </LinearLayout>
</FrameLayout>